--- a/Menu.html
+++ b/Menu.html
@@ -10,16 +10,87 @@
 <!--****************************************************************************************-->
 
 
-<div class="top"><h1 style="color:yellow ;"> Welcome to menu</h1></div>
-
-<div class="l">left</div>
+<div class="top"><h1 style="color:yellow ; font-size: 30px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"> Welcome to menu   
+ <header>
+    <a href="Menu.html">Menu</a> 
+    <a href="page1.html">Home</a>   
+    <a href="contact.html">Contact</a>     
+ </header>
+</h1></div>
+<div class="l"><img src="images/starwars food.jpg" height="150px"   width="100%"></div>
 <div class="m"></div>
-<div class="r">right</div>
-<div class="br">Drinks and other items</div>
-<div class="bl">Meals</div>
-<div class="ml">middle left</div>
-<div class="mr">middle right</div>
-<div class="bm">bottom middle </div>
+<div class="r"> <img src="images/stormtrooper3.JPG" height="150px"   width="100%"></div>
+<div class="br" style="color:black ;"><h1 style="font-size: 20px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; text-align: center;"></h1><u>Food</u> </h1>
+    <ul>
+    <li>1)triple Cheese Burger deluxe and loaded fries with melted cheese £10.60</li>
+    <li> 2) super deluxe sub 24inch and 5pack of pepperami £16.50</li>
+    <li>3) American West Coast Special Two large portions of fried chicken and a side of watermelon   £7.50</li>
+    <li>4) Spagetti bolognese £6.50</li>
+    <li>5) Chicken and chips £5.50</li>
+    <li>6) sausages and mash with gravy £7.50</li>
+    <li>7)pepperoni pizza £8.50 </li>
+    <li>8) Cheese pizza £8</li>
+    <li>9) chicken salad sandwich £6</li>
+    <li>10) chicken korma £6.50</li>
+    </ul>
+    </div>
+   
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</div>
+</div>
+
+  
+    <div class="bl" style="color:black ;"><h1 style="font-size: 20px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; text-align: center;"></h1> <u>Drinks and Beverages</u></h1>
+        <ul>
+            <li>1) Strawberry with whipped cream and sprinkles £3.50</li>
+            <li>2)Choclate Milkshake with whipped cream £3.50</li>
+            <li>3) Iced Coca-Cola £2.50</li>
+            <li>4)Iced Lemonade with lemon on top £2.80</li>
+            <li>5) americano coffee £3.20</li>
+            <li>6) Latte £2.90</li>
+            <li>7)English tea £2.40</li>
+            <li>8) orange juice £1.50</li>
+            <li>9) Hot chocolate £2.10</li>
+            <li>10) Pepsi £2.60</li>
+            </ul >
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</div>
+</div>
+<div class="ml"></div>
+<div class="mr"></div>
+<div class="bm"> </div>
+
+
 
 
 
@@ -46,55 +117,7 @@
  <!--****************************************************************************************-->   
 
 
- <header>
-    <a href="Menu.html">Menu</a> 
-    <a href="page1.html">Home</a>   
-    <a href="contact.html">Contact</a>     
 
-
-
-
-
-
-
-
-
-</header>
-
-
-
-
-
-<div class="br"> 
-    <ul>
-    <li>1</li>
-    <li>2</li>
-    <li>3</li>
-    <li>4</li>
-    <li>5</li>
-    <li>6</li>
-    <li>7</li>
-    <li>8</li>
-    <li>9</li>
-    <li>10</li>
-    <li></li>
-    </ul>
-    </div>
-    <div class="bl">
-        <ul>
-            <li>1</li>
-            <li>2</li>
-            <li>3</li>
-            <li>4</li>
-            <li>5</li>
-            <li>6</li>
-            <li>7</li>
-            <li>8</li>
-            <li>9</li>
-            <li>10</li>
-            <li></li>
-            </ul
-            >
 
 
 
