--- a/page1.html
+++ b/page1.html
@@ -9,19 +9,13 @@
 <body>
 <!--****************************************************************************************-->
 
-<h1 style="color:blue ;"> Welcome to the Site!</h1>
-
-
-
-
-
-
-
-
-<header>
+<h1 style="color:yellow ;font-size: 35px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"> 
+      <header>
     <a href="Menu.html">Menu</a> 
     <a href="page1.html">Home</a>   
-    <a href="page3.html">Contact</a>     
+    <a href="contact.html">Contact</a>     
+ </header>
+</h1>
 
 
 
@@ -31,25 +25,21 @@
 
 
 
-</header>
+
+<div class="header"><h1 style="color:yellow ;"> Welcome to the starwars cafe</h1> </div>
 
 
-
-<div class="header">This is my header box </div>
-
-
-<div class="small">This is the best cafe in the galaxy!</div>
-<div class="small">
-    Hello and Welcome to this starwars Cafe where beverages from all over the galaxy are served on earth</div>
-
-
-
+<div class="small"><img src="images/starwars food.jpg" height="60%"   width="auto">
+    </div>
+   
+<div class="smallright"><img src="images/starwars.jpg.jfif" height="60%" width="auto"></div>
+<div class="Bottommiddle" style="color:red ;" ></div>  
+<div class="box1"  style="color:black ; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; text-align: center;">info This is one of Few Starwars cafes in the world only 5 exist including this one! We are currently located in Alberquerque New Mexico USA as the Desert surroundings look like tattoine </div>
+<div class="box1"  style="color:black ; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; text-align: center;">info Our Biggest Starwars Cafe Is Located on Mayfair street London United Kingdom!</div>
 
 
 
 
-
-</div>
 
 
 
